# lean-memory

./: ARCHITECTURE.md  PERFORMANCE.md  README.md  pyproject.toml
bench/: bet2_ablation.py  bet2_goldset.py  smoke_quality.py
docs/superpowers/plans/: 2026-06-21-demo-agent.md  2026-06-21-mcp-server.md
examples/: chat.py  mcp_config.json
src/lean_memory/: __init__.py  mcp_server.py  memory.py  types.py
src/lean_memory/embed/: base.py  fake.py  sentence_transformer.py
src/lean_memory/extract/: contradiction.py  gliner_extractor.py  llm_typer.py  router.py  rules.py  salience.py  taxonomy.py
src/lean_memory/retrieve/: rerank.py  retriever.py
src/lean_memory/store/: base.py  schema.py  sqlite_store.py
tests/: test_chat.py  test_contradiction_extends.py  test_mcp_server.py  test_phase1_extraction.py  test_router.py  test_spine.py
